--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <section class="about">
-  <img src="assets/profile.jpg" alt="Profile picture of Laura Pérez Cervera" class="profile-image">
+  <img src="../../../assets/Perfil Directora_LPC 2jpg.jpg" alt="Profile picture of Laura Pérez Cervera" class="profile-image">
   
   <h1 class="name">Laura Pérez Cervera</h1>
 
