--- a/src/app/components/project-card/project-card.component.css
+++ b/src/app/components/project-card/project-card.component.css
@@ -15,7 +15,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background-color: rgba(0, 0, 0, 0.3); 
+background-color: rgba(243, 156, 18, 0.2) ; 
 opacity: 0;
 transition: opacity 0.3s ease;
 }
@@ -35,15 +35,16 @@ justify-content: space-between;
 }
 
 .title {
-font-size: 1.2rem;
+font-size: 1.3rem;
 font-weight: bold;
+z-index: 2;
 }
 
 .type {
 position: absolute;
 bottom: 50px;
 right: 20px;
-font-size: 1rem;
+font-size: 1.2rem;
 font-weight: bold;
 color: black;
 opacity: 0; 
