--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -6,8 +6,8 @@
 }
 
 .profile-image {
-  width: 150px;
-  height: 150px;
+  width: 300px;
+  height: 300px;
   object-fit: cover;
   margin-bottom: 20px;
 }
@@ -24,18 +24,36 @@
   margin-bottom: 20px;
 }
 
-.social-links img {
-  width: 32px;
-  height: 32px;
-  transition: transform 0.3s ease;
+.social-links .icon-container {
+  width: 60px;
+  height: 30px;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 6px;
+  overflow: hidden;
+  box-sizing: border-box; /* Ensure padding is included in the container size */
+  transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
-.social-links img:hover {
+.social-links img {
+  width: 100%;
+  height: 100%;
+  margin-top: 1px;
+}
+
+.cima-container {
+  padding: 5px; /* Add padding to CIMA container */
+}
+
+.social-links a:hover .icon-container {
   transform: scale(1.1);
+  background-color: #F39C12;
 }
 
 .description {
-  font-size: 1rem;
+  font-size: 1.1rem;
   line-height: 1.6;
   margin-bottom: 40px;
   padding: 0 20px;
@@ -43,7 +61,14 @@
 
 .projects {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(2, 1fr);
     gap: 50px;
     padding: 20px;
+  }
+
+  .underlined {
+    text-decoration: underline;
+    text-decoration-thickness: 2px; /* Optional: makes the underline thicker */
+    text-underline-offset: 3px;     /* Optional: creates spacing from text */
+    text-decoration-color: #F39C12;
   }
