--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    font-family: 'Fira Sans', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #000;
+    overflow-x: hidden;
+  }
+  
+  h1, h2, h3, .title {
+    font-family: Arial, sans-serif;
+  }
