--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,7 +1,7 @@
 .nav-bar {
     width: 100%;
     padding: 10px 20px;
-    overflow-x: hidden; 
+    box-sizing: border-box; 
   }
   
   .nav-links {
