borrar social links

--- a/src/app/nav/nav.component.css
+++ b/src/app/nav/nav.component.css
@@ -1,6 +1,6 @@
 .nav-bar {
     width: 100%;
-    padding: 10px 20px;
+    padding: 10px;
     box-sizing: border-box; 
   }
   
@@ -9,7 +9,7 @@
     justify-content: flex-end;
     gap: 40px;
     list-style: none;
-    margin-right: 50px;
+    margin-right: 40px;
     padding: 0;
   }
   
