--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,22 +6,9 @@
   <p class="description">
     Laura Pérez Cervera is a screenwriter and filmmaker who tells <span class="underlined">bold, heartfelt stories</span> with soul and a little bit of sparkle. 
     She’s the writer-director behind Bendita Rebeldía, a feature film praised for its <span class="underlined">strong female lead and emotional bite</span>, and was part of the Creative Direction team behind Disney’s Oscar-winning Encanto—yes, that magical family. 
-    Whether it’s grounded drama, a dash of <span class="underlined">magical realism</span>, or something totally offbeat, Laura brings sharp storytelling, big heart, and vibrant visuals to everything she does.
+    <br><br>Whether it’s grounded drama, a dash of <span class="underlined">magical realism</span>, or something totally offbeat, Laura brings sharp storytelling, big heart, and vibrant visuals to everything she does.
     Her work spans drama, comedy, and the fantastical, always grounded in deep empathy and a strong sense of place.
   </p>
-
-  <div class="social-links">
-    <a href="https://cimamujerescineastas.es/socia/perez-cervera-laura-alejandra/" target="_blank" rel="noopener">
-      <div class="icon-container cima-container">
-        <img src="assets/cima_logo.png" alt="Cima">
-      </div>
-    </a>
-    <a href="https://www.imdb.com/es-es/name/nm8747765/?ref_=nv_sr_srsg_0_tt_0_nm_4_in_0_q_laura%2520perez%2520cerv" target="_blank" rel="noopener">
-      <div class="icon-container imdb-container">
-        <img src="assets/imdb_logo.png" alt="IMDb">
-      </div>
-    </a>
-  </div>  
 
 </section>
 
@@ -34,3 +21,17 @@
     [link]="project.link">
   </app-project-card>
 </section>
+
+<!-- <div class="social-links">
+  <a href="https://cimamujerescineastas.es/socia/perez-cervera-laura-alejandra/" target="_blank" rel="noopener">
+    <div class="icon-container cima-container">
+      <img src="assets/cima_logo.png" alt="Cima">
+    </div>
+  </a>
+  <a href="https://www.imdb.com/es-es/name/nm8747765/?ref_=nv_sr_srsg_0_tt_0_nm_4_in_0_q_laura%2520perez%2520cerv" target="_blank" rel="noopener">
+    <div class="icon-container imdb-container">
+      <img src="assets/imdb_logo.png" alt="IMDb">
+    </div>
+  </a>
+</div>   -->
+
