--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -34,12 +34,12 @@
   <div class="crew-experience">
     <h3>Collaborations & Crew Roles</h3>
     <ul class="crew-compact-list">
-      <li><strong>La Perra Producciones</strong> – Writer</li>
-      <li><strong>Del Viento Films</strong> – Writer, First Assistant Director</li>
-      <li><strong>Dirty Kitchen Productions</strong> – Director, First AD, Casting</li>
-      <li><strong>Narcos (Season 2)</strong> – Production Assistant</li>
-      <li><strong>La Guapa Films</strong> – First Assistant Director</li>
-      <li><strong>Los Notarios Productions</strong> – Second Assistant Director</li>
+      <li>La Perra Producciones – Writer</li>
+      <li>Del Viento Films – Writer, First Assistant Director</li>
+      <li>Dirty Kitchen Productions – Director, First AD, Casting</li>
+      <li>Narcos (Season 2) – Production Assistant</li>
+      <li>La Guapa Films – First Assistant Director</li>
+      <li>Los Notarios Productions – Second Assistant Director</li>
     </ul>
   </div>
 </section>
