--- a/src/app/pages/charlie/charlie.component.html
+++ b/src/app/pages/charlie/charlie.component.html
@@ -15,7 +15,7 @@
         Created with the Creative Minds Group at Sundance Film Festival 2017.
       </p>
       <p>
-        Writer and Director for the short film <em>Charlie</em>, which won Best Screenplay and the Audience Award at the "We Made It in Sundance" Film Competition.
+        Writer and Director for the short film Charlie, which won Best Screenplay and the Audience Award at the "We Made It in Sundance" Film Competition.
       </p>
   
       <div class="highlight-box">
