--- a/src/app/pages/encanto/encanto.component.html
+++ b/src/app/pages/encanto/encanto.component.html
@@ -12,7 +12,7 @@
   
     <div class="project-description">
         <p> Writer and director at Walt Disney Animation Studios from 2021 to 2022.</p>
-        <p>Part of the creative leadership team behind <em>Encanto</em>, the Academy Award-winning animated film by WDAS. 
+        <p>Part of the creative leadership team behind Encanto, the Academy Award-winning animated film by WDAS. 
         Collaborated with producers Yvett Merino, Jennifer Lee, Brad Simonsen, and Clack Spenser, alongside directors and writers Jared Bush, Byron Howard, and Charise Castro Smith.
         </p>
   
