--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="about">
   <img src="assets/Perfil Directora_LPC 2jpg.jpg" alt="Profile picture of Laura Pérez Cervera" class="profile-image">
-  
+
   <h1 class="name">Laura Pérez Cervera</h1>
 
   <p class="description">
@@ -16,10 +16,8 @@
 </section>
 
 <section class="work">
+  <h3><span class="dot"></span> Director & Writer Projects</h3>
 
-  <h3>Director & Writer Projects</h3>
-
-  <!-- Projects Grid -->
   <div class="projects">
     <app-project-card
       *ngFor="let project of projects"
@@ -30,9 +28,8 @@
     </app-project-card>
   </div>
 
-  <!-- Crew Roles List -->
   <div class="crew-experience">
-    <h3>Collaborations & Crew Roles</h3>
+    <h3><span class="dot"></span> Collaborations & Crew Roles</h3>
     <ul class="crew-compact-list">
       <li>La Perra Producciones – Writer</li>
       <li>Del Viento Films – Writer, First Assistant Director</li>
