--- a/src/app/components/project-card/project-card.component.css
+++ b/src/app/components/project-card/project-card.component.css
@@ -7,6 +7,7 @@ background-position: center;
 overflow: hidden;
 text-decoration: none;
 color: black;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .overlay {
