ajuste correo contacto

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -3,7 +3,7 @@
   
     <p>If you'd like to get in touch or explore more of my work, you can reach me at:</p>
   
-    <p class="highlight-box">laura.perez.cervera@gmail.com</p>
+    <p class="highlight-box">laura.perezcervera@gmail.com</p>
   
     <h2 class="section-title"><span class="dot"></span> Follow</h2>
     <div class="project-credits">
