Ajuste en contacto por mail

--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -1,11 +1,13 @@
 <div class="project-page">
     <h1 class="title">Contact</h1>
   
-    <p>If you'd like to get in touch or explore more of my work, you can reach me at:</p>
+    <p>If you'd like to get in touch or explore more of my work, feel free to reach out.</p>
   
-    <p class="highlight-box">laura.perezcervera@gmail.com</p>
+    <p class="highlight-box">
+      <a href="mailto:laura.perezcervera@gmail.com">Click here to email me</a>
+    </p>
   
-    <h2 class="section-title"><span class="dot"></span> Follow</h2>
+    <h2 class="section-title"><span class="dot"></span>Follow</h2>
     <div class="project-credits">
       <p>
         <a href="https://www.imdb.com/es-es/name/nm8747765/?ref_=nv_sr_srsg_0_tt_0_nm_4_in_0_q_laura%2520perez%2520cerv" target="_blank">
