ajuste textos y portadas proyectos

--- a/src/app/pages/benditarebeldia/benditarebeldia.component.html
+++ b/src/app/pages/benditarebeldia/benditarebeldia.component.html
@@ -29,5 +29,26 @@
       <p>Distribution: Cine Colombia</p>
       <p>Sales and International Rep: Shoreline Entertainment</p>
     </div>
+
+    <h2 class="section-title"><span class="dot"></span> Press</h2>
+  
+    <div class="project-credits">
+      <p>
+        <a href="https://www.elespectador.com/entretenimiento/cine-y-tv/bendita-rebeldia-una-pelicula-teatral-article-904972/" target="_blank">
+        Bendita rebeldía, una película teatral</a>
+        - El Espectador
+      </p>
+      <p>
+        <a href="https://revistadiners.com.co/cultura/76159_bendita-rebeldia-la-nueva-comedia-colombiana-para-ver-en-cine-el-fin-de-semana/" target="_blank">
+        Bendita rebeldía, la nueva comedia colombiana para ver en cine el fin de semana</a>
+        - Revista Diners
+      </p>
+      <p>
+        <a href="https://revistadiners.com.co/cultura/76159_bendita-rebeldia-la-nueva-comedia-colombiana-para-ver-en-cine-el-fin-de-semana/" target="_blank">
+        Colombia’s First Female-Lead Comedy</a>
+        - Virago Rising
+      </p>
+    </div>
+
   </div>
   
