--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -7,11 +7,16 @@
       <a href="mailto:laura.perezcervera@gmail.com">Click here to email me</a>
     </p>
   
-    <h2 class="section-title"><span class="dot"></span>Follow</h2>
+    <h2 class="section-title"><span class="dot"></span>Profiles</h2>
     <div class="project-credits">
       <p>
         <a href="https://www.imdb.com/es-es/name/nm8747765/?ref_=nv_sr_srsg_0_tt_0_nm_4_in_0_q_laura%2520perez%2520cerv" target="_blank">
-          IMDb Profile
+          IMDb
+        </a>
+      </p>
+      <p>
+        <a href="https://cimamujerescineastas.es/socia/perez-cervera-laura-alejandra/" target="_blank">
+          CIMA
         </a>
       </p>
     </div>
