--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,5 @@
 <section class="about">
-  <img src="assets/Perfil Directora_LPC 2jpg.jpg" alt="Profile picture of Laura Pérez Cervera" class="profile-image">
+  <img src="assets/LPCPerfil.jpg" alt="Profile picture of Laura Pérez Cervera" class="profile-image">
 
   <h1 class="name">Laura Pérez Cervera</h1>
 
@@ -43,16 +43,4 @@
 
 
 
-<!-- <div class="social-links">
-  <a href="https://cimamujerescineastas.es/socia/perez-cervera-laura-alejandra/" target="_blank" rel="noopener">
-    <div class="icon-container cima-container">
-      <img src="assets/cima_logo.png" alt="Cima">
-    </div>
-  </a>
-  <a href="https://www.imdb.com/es-es/name/nm8747765/?ref_=nv_sr_srsg_0_tt_0_nm_4_in_0_q_laura%2520perez%2520cerv" target="_blank" rel="noopener">
-    <div class="icon-container imdb-container">
-      <img src="assets/imdb_logo.png" alt="IMDb">
-    </div>
-  </a>
-</div>   -->
 
